# edge-sparse-lab

./: .gitignore  DESIGN_PHASE2.md  pyproject.toml
scripts/: 00_download_model.py  01_build_calibration.py  02_prune.py  03_eval_quality.py  05_compare_methods.py
src/edgesparse/: __init__.py
src/edgesparse/calibration/: __init__.py  activation_capture.py  dataset.py
src/edgesparse/eval/: __init__.py  perplexity.py  report.py
src/edgesparse/models/: __init__.py  loader.py
src/edgesparse/pruning/: __init__.py  block_sparse.py  magnitude.py  mask_utils.py  sparsegpt.py  structured_nm.py  wanda.py
src/edgesparse/runtime/: mlx_engine.py
src/edgesparse/system/: analyze.py
tests/: conftest.py  test_analyze.py  test_block_mask.py  test_mlx_engine.py  test_nm_mask.py  test_sparsegpt.py  test_wanda_score.py
